--- a/EduCodar projetos/portifolio_index.html
+++ b/EduCodar projetos/portifolio_index.html
@@ -11,7 +11,6 @@
 			<ul class="ul">
 				<li>INÍCIO</li>
 				<li>PRODUTOS</li>
-				<li>ORÇAMENTO</li>
 				<li>SOBRE</li>
 				<li>CONTATOS</li>
 			</ul>
@@ -21,10 +20,63 @@
 		</div>
 	</div>
 
-	<div class="content">
+	<div class="text">
+			<p class="paragrafo">Trabalhando com arte gráfica desde 2016, a Digital Art busca oferecer desde o produto mais simples porém bem feito, até 
+				trabalhos asrtísticos mais detalhados para nossos clientes. 
+			</p>
+	</div>
 
+	<div class="container-cartao">
+		<div class="cartao">
+			<img src="img/cartao.png" class="imgcard">
+			<p class="cartao-text">Cartão de visita de corte padrão.
+			<br>
+			Foi feito o uso cores frias com efeito gradiente centralizado.
+			<br>
+			Produção do cartão em duas cores.
+			</p>
+		</div>
+		<div class="cartao">
+			<p class="cartao-text">Cartão de visita de corte estilizado com canto arredondado.
+			<br>
+			Foram utilizadas cores neutras e frias. 
+			<br>
+			Uso de cores sólidas.
+			<br>
+			Produção do cartão em duas cores.
+			</p>
+			<img src="img/cartao.png" class="imgcard">
+		</div>
+		<div class="cartao">
+			<img src="img/cartao.png" class="imgcard">
+			<p class="cartao-text">Cartão de visita de corte padrão.
+			<br>
+			Uso de cores quentes e imagens para composição do layout.
+			<br>
+			Produção do cartão em uma cor.
+			</p>
+		</div>
+		<div class="botao">
+		<input type="image" src="img/botao_produtos.png"> 
+		</div>
+	</div>
+	<div class="banner">
+		<img src="img/banner.jpg" class="imgsize"> 
+		<p class="banner-text">Criação de folders e panfletos em tamanho padrão e estilizado.
+		<br>
+		<br>
+		Divulgue seu negócios de forma elegante. Fuja dos padrões! 
+		<br>
+		Layouts únicos e chamativos.
+		</p>
+	</div>
+	<div class="footer">
 
 	</div>
+
+	<footer>
+		copyright 2019
+	</footer>
 
 </body>
 </html>
