--- a/EduCodar projetos/portifolio_index.html
+++ b/EduCodar projetos/portifolio_index.html
@@ -19,13 +19,11 @@
 			<img src="img/Logotipo.png">
 		</div>
 	</div>
-
 	<div class="text">
 			<p class="paragrafo">Trabalhando com arte gráfica desde 2016, a Digital Art busca oferecer desde o produto mais simples porém bem feito, até 
 				trabalhos asrtísticos mais detalhados para nossos clientes. 
 			</p>
 	</div>
-
 	<div class="container-cartao">
 		<div class="cartao">
 			<img src="img/cartao.png" class="imgcard">
@@ -62,7 +60,7 @@
 	</div>
 	<div class="banner">
 		<img src="img/banner.jpg" class="imgsize"> 
-		<p class="banner-text">Criação de folders e panfletos em tamanho padrão e estilizado.
+		<p class="banner-text">Criação de banners, folders e panfletos em tamanho padrão e estilizado.
 		<br>
 		<br>
 		Divulgue seu negócios de forma elegante. Fuja dos padrões! 
@@ -70,36 +68,44 @@
 		Layouts únicos e chamativos.
 		</p>
 	</div>
-	<div class="footer">
+	<div class="end">
+		<p>Veja nossas gráficas parceiras:
+			<br>
+			<br>
+			Zap Gráfica - <a href="www.zapgrafica.com.br" class="link">www.zapgrafica.com.br</a>
+			<br>
+			(31)2566-65550 
+			<br>
+			<br>
+			Futura Express - <a href="www.futuraexpress.com.br" class="link"> www.futuraexpress.com.br</a>
+			<br>
+			(31)3025-0000
+			<br>
+			<br>
+			Gráfica Hollyday -  <a href="www.graficahollyday.com.br" class="link">www.graficahollyday.com.br</a>
+			<br>
+			(31)3384-6633
+		</p>
 
+		<p>Selecione seu idioma:
+			<br>
+			<br>
+			Português - BR
+			<br>
+			Inglês - ENG
+			<br>
+			Espanhol - ES
+		</p>
+
+		<p>Siga-nos em nossas redes sociais:
+			<br>
+			<img src="img/facebook.png" alt="logotipo do Facebook" class="network">
+			<img src="img/instagram.png" alt="logomarca do Instagram" class="network">
+		</p>
 	</div>
-
-	<footer>
-		copyright 2019
+	<footer class="footer">
+		<p> &copy; Copyright D.A.R.T - 2019</p>
 	</footer>
 
 </body>
-</html>
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
