Adição de imagens de redes sociais e copyright.

--- a/EduCodar projetos/portifolio_index.html
+++ b/EduCodar projetos/portifolio_index.html
@@ -103,9 +103,11 @@
 			<img src="img/instagram.png" alt="logomarca do Instagram" class="network">
 		</p>
 	</div>
-	<footer class="footer">
-		<p> &copy; Copyright D.A.R.T - 2019</p>
-	</footer>
+	<div class="footer">
+		<footer>
+			Copyright&copy;D.A.R.T - 2019
+		</footer>
+	</div>
 
 </body>
 </html>
