Centralização do copyright. Adição de links nas imagens de rede sociais.

--- a/EduCodar projetos/portifolio_index.html
+++ b/EduCodar projetos/portifolio_index.html
@@ -72,17 +72,17 @@
 		<p>Veja nossas gráficas parceiras:
 			<br>
 			<br>
-			Zap Gráfica - <a href="www.zapgrafica.com.br" class="link">www.zapgrafica.com.br</a>
+			Zap Gráfica - <a target="_blank" href="www.zapgrafica.com.br" class="link">www.zapgrafica.com.br</a>
 			<br>
 			(31)2566-65550 
 			<br>
 			<br>
-			Futura Express - <a href="www.futuraexpress.com.br" class="link"> www.futuraexpress.com.br</a>
+			Futura Express - <a target="_blank" href="www.futuraexpress.com.br" class="link"> www.futuraexpress.com.br</a>
 			<br>
 			(31)3025-0000
 			<br>
 			<br>
-			Gráfica Hollyday -  <a href="www.graficahollyday.com.br" class="link">www.graficahollyday.com.br</a>
+			Gráfica Hollyday -  <a target="_blank" href="www.graficahollyday.com.br" class="link">www.graficahollyday.com.br</a>
 			<br>
 			(31)3384-6633
 		</p>
@@ -99,15 +99,13 @@
 
 		<p>Siga-nos em nossas redes sociais:
 			<br>
-			<img src="img/facebook.png" alt="logotipo do Facebook" class="network">
-			<img src="img/instagram.png" alt="logomarca do Instagram" class="network">
+			<a target="_blank" href="www.facebook.com"><img src="img/facebook.png" alt="logotipo do Facebook" class="network"></a>
+			<a target="_blank" href="www.instagram.com"><img src="img/instagram.png" alt="logomarca do Instagram" class="network"></a>
 		</p>
 	</div>
-	<div class="footer">
-		<footer>
-			Copyright&copy;D.A.R.T - 2019
-		</footer>
-	</div>
+	<footer>
+		Copyright&copy;D.A.R.T - 2019
+	</footer>
 
 </body>
 </html>
