conferindo alterações anteriores.

--- a/EduCodar projetos/index.html
+++ b/EduCodar projetos/index.html
@@ -7,10 +7,10 @@
 </head>
 </body>
 	<div class="layout">	
-		<nav class="menu">
+		<nav id="menu">
 			<ul class="ul">
 				<li>INÍCIO</li>
-				<li><a target="_blank" href="produtos.html">PRODUTOS</a></li>
+				<li><a href="produtos.html">PRODUTOS</a></li>
 				<li>SOBRE</li>
 				<li>CONTATOS</li>
 			</ul>
@@ -20,8 +20,7 @@
 		</div>
 	</div>
 	<div class="text">
-			<p class="paragrafo">Trabalhando com arte gráfica desde 2016, a Digital Art busca oferecer desde o produto mais simples porém bem feito, até 
-				trabalhos asrtísticos mais detalhados para nossos clientes. 
+			<p class="paragrafo">Desde 2016 trabalhando com desenvolvimento de logotipos e identidade visual que agregam valor a produtos e serviços.
 			</p>
 	</div>
 	<div class="container-cartao">
@@ -55,7 +54,9 @@
 			</p>
 		</div>
 		<div class="botao">
-		<input type="image" src="img/botao_produtos.png"> 
+			<a href="produtos.html">
+				<input type="image" src="img/botao_produtos.png">
+			</a>
 		</div>
 	</div>
 	<div class="banner">
@@ -68,21 +69,28 @@
 		Layouts únicos e chamativos.
 		</p>
 	</div>
+
+	<div class="seta">
+		<a href="#menu">
+		<img src="img/seta_top.png" class="seta_img">
+		</a>
+	</div>
+
 	<div class="end">
 		<p>Veja nossas gráficas parceiras:
 			<br>
 			<br>
-			Zap Gráfica - <a target="_blank" href="www.zapgrafica.com.br" class="link">www.zapgrafica.com.br</a>
+			Zap Gráfica - <a target="_blank" href="http://www.zapgrafica.com.br" class="link">www.zapgrafica.com.br</a>
 			<br>
 			(31)2566-65550 
 			<br>
 			<br>
-			Futura Express - <a target="_blank" href="www.futuraexpress.com.br" class="link"> www.futuraexpress.com.br</a>
+			Futura Express - <a target="_blank" href="http://www.futuraexpress.com.br" class="link"> www.futuraexpress.com.br</a>
 			<br>
 			(31)3025-0000
 			<br>
 			<br>
-			Gráfica Hollyday -  <a target="_blank" href="www.graficahollyday.com.br" class="link">www.graficahollyday.com.br</a>
+			Gráfica Hollyday -  <a target="_blank" href="http://www.graficahollyday.com.br" class="link">www.graficahollyday.com.br</a>
 			<br>
 			(31)3384-6633
 		</p>
@@ -99,12 +107,12 @@
 
 		<p>Siga-nos em nossas redes sociais:
 			<br>
-			<a target="_blank" href="www.facebook.com"><img src="img/facebook.png" alt="logotipo do Facebook" class="network"></a>
-			<a target="_blank" href="www.instagram.com"><img src="img/instagram.png" alt="logomarca do Instagram" class="network"></a>
+			<a target="_blank" href="http://www.facebook.com"><img src="img/facebook.png" alt="logotipo do Facebook" class="network"></a>
+			<a target="_blank" href="http://www.instagram.com"><img src="img/instagram.png" alt="logomarca do Instagram" class="network"></a>
 		</p>
 	</div>
 	<footer>
-		Copyright&copy;D.A.R.T - 2019
+		Copyright&copy;D.A.R.T - 2019 | Todos os Direitos Reservados
 	</footer>
 
 </body>
