--- a/EduCodar projetos/produtos.html
+++ b/EduCodar projetos/produtos.html
@@ -9,7 +9,7 @@
 	<div class="layout">	
 		<nav class="menu">
 			<ul class="ul">
-                <li><a target="_blank" href="index.html">INÍCIO</a></li>
+                <li><a href="index.html">INÍCIO</a></li>
 				<li>PRODUTOS</li>
 				<li>SOBRE</li>
 				<li>CONTATOS</li>
@@ -18,4 +18,4 @@
 		<div class="logo">
 			<img src="img/Logotipo.png">
 		</div>
-    </div>
+	</div>
