Substituições das imagens da index. Criação das outras páginas.

--- a/EduCodar projetos/contatos.html
+++ b/EduCodar projetos/contatos.html
@@ -10,36 +10,12 @@
 		<nav class="menu">
 			<ul class="ul">
                 <li><a href="index.html">INÍCIO</a></li>
-				<li>PRODUTOS</li>
+				<li><a href="produtos.html">PRODUTOS</a></li>
 				<li><a href="sobre.html">SOBRE</a></li>
-				<li><a href="contatos.html">CONTATOS</a></li>
+				<li>CONTATOS</li>
 			</ul>
 		</nav>
 		<div class="logo">
 			<img src="img/Logotipo.png">
 		</div>
 	</div>
-	<div class="text">
-		<p class="paragrafo">Produção dos mais variados tipos de produtos. Brindes, cadernos, artes e outros.
-		</p>
-
-		<img class="transicao" name="slide"> 
-</div>
-
-
-
-</body>
-</html>
-
-<script>
-	var i = 0;
-	var images = [];
-	var time = 3000;
-
-	image[0] = 'image1.jpg'
-	
-
-
-
-
-</script>
