--- a/EduCodar projetos/index.html
+++ b/EduCodar projetos/index.html
@@ -11,8 +11,8 @@
 			<ul class="ul">
 				<li>INÍCIO</li>
 				<li><a href="produtos.html">PRODUTOS</a></li>
-				<li>SOBRE</li>
-				<li>CONTATOS</li>
+				<li><a href="sobre.html">SOBRE</a></li>
+				<li><a href="contatos.html">CONTATOS</a></li>
 			</ul>
 		</nav>
 		<div class="logo">
@@ -25,7 +25,7 @@
 	</div>
 	<div class="container-cartao">
 		<div class="cartao">
-			<img src="img/cartao.png" class="imgcard">
+			<img src="img/cartao1.png" class="imgcard">
 			<p class="cartao-text">Cartão de visita de corte padrão.
 			<br>
 			Foi feito o uso cores frias com efeito gradiente centralizado.
@@ -34,7 +34,7 @@
 			</p>
 		</div>
 		<div class="cartao">
-			<p class="cartao-text">Cartão de visita de corte estilizado com canto arredondado.
+			<p class="cartao-text">Cartão de visita de corte padrão com canto arredondado.
 			<br>
 			Foram utilizadas cores neutras e frias. 
 			<br>
@@ -42,13 +42,13 @@
 			<br>
 			Produção do cartão em duas cores.
 			</p>
-			<img src="img/cartao.png" class="imgcard">
+			<img src="img/cartao2.png" class="imgcard">
 		</div>
 		<div class="cartao">
-			<img src="img/cartao.png" class="imgcard">
-			<p class="cartao-text">Cartão de visita de corte padrão.
+			<img src="img/cartao3.png" class="imgcard">
+			<p class="cartao-text">Cartão de visita de corte especial.
 			<br>
-			Uso de cores quentes e imagens para composição do layout.
+			Uso de cores mistas.
 			<br>
 			Produção do cartão em uma cor.
 			</p>
