Criação da animação com javascript.

--- a/EduCodar projetos/produtos.html
+++ b/EduCodar projetos/produtos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html leng="pt-br">
 <head>
+	<script src="script_produtos.js"></script>
 	<title>D.A.R.T</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style_produtos.css">
@@ -22,24 +23,10 @@
 	<div class="text">
 		<p class="paragrafo">Produção dos mais variados tipos de produtos. Brindes, cadernos, artes e outros.
 		</p>
-
-		<img class="transicao" name="slide"> 
-</div>
-
-
+		<div>
+			<img id="slide" name="slide" width="400" height="300">
+		</div>
+	</div>
 
 </body>
 </html>
-
-<script>
-	var i = 0;
-	var images = [];
-	var time = 3000;
-
-	image[0] = 'image1.jpg'
-	
-
-
-
-
-</script>
