--- a/EduCodar projetos/sobre.html
+++ b/EduCodar projetos/sobre.html
@@ -19,3 +19,7 @@
 			<img src="img/Logotipo.png">
 		</div>
 	</div>
+	<div class="text">
+			<p class="paragrafo">Desde 2016 trabalhando com desenvolvimento de logotipos e identidade visual que agregam valor a produtos e serviços.
+			</p>
+	</div>
