Substituição da logo. (revisar página sobre)

--- a/EduCodar projetos/contatos.html
+++ b/EduCodar projetos/contatos.html
@@ -25,7 +25,7 @@
 	<p class="paragrafo">
 		Entre em contato conosco pelo whatsapp
 		<div class="api">
-			<a target="blank" href="https://api.whatsapp.com/send?phone=5531998608325&text=Olá,%20gostaria%20de%20fazer%20um%20orçamento!">
+			<a target="_blank" href="https://api.whatsapp.com/send?phone=5531998608325&text=Olá,%20gostaria%20de%20fazer%20um%20orçamento!">
 				<img class="whatsapp" src="img/whatsapp_logo.png">
 			</a>
 		</div>
