--- a/EduCodar projetos/sobre.html
+++ b/EduCodar projetos/sobre.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html leng="pt-br">
 <head>
+	<script src="script_produtos.js"></script>
 	<title>D.A.R.T</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style_sobre.css">
+	<link rel="stylesheet" type="text/css" href="css/style_produtos.css">
 </head>
 </body>
-	
+
 <div class="layout">	
 	<nav id="menu">
 		<ul class="ul">
 			<li><a href="index.html">INÍCIO</a></li>
-			<li><a href="produtos.html">PRODUTOS</a></li>
-			<li>SOBRE</a></li>
+			<li>PRODUTOS</li>
+			<li><a href="sobre.html">SOBRE</a></li>
 			<li><a href="contatos.html">CONTATOS</a></li>
 		</ul>
 	</nav>
@@ -22,7 +23,8 @@
 </div>
 
 <div class="text">
-	<p class="paragrafo">A D.A.R.T surgiu a partir de um projeto disciplinar no curso de design gráfico que eu realizei. O nome é a 
+	<p class="paragrafo">
+		A D.A.R.T surgiu a partir de um projeto disciplinar no curso de design gráfico que eu realizei. O nome é a 
 		abreviação para 'D'igital 'Art'. Levou 3 anos até que pudesse tornar esse projeto em algo real. Hoje, atuando há 1 ano e meio,
 		a Digital Art preza pela eficiência e qualidade na hora da criação, tornando assim os valores de cada produto, mais acessível e 
 		atrativo para quem quer realizar um serviço.
@@ -33,13 +35,13 @@
 	</p>
 </div>
 
+
 <div class="seta">
 	<a href="#menu">
 	<img src="img/seta_top.png" class="seta_img">
 	</a>
 </div>
-		
-		
+
 <div class="end">
 	<p>Veja nossas gráficas parceiras:
 		<br>
